--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,9 @@ header {
   will-change: filter;
   transition: filter 300ms;
   margin: 0;
+  font-weight: bold;
+  font-size: 1.5rem;
+  font-style: italic;
 }
 .logo:hover {
   filter: drop-shadow(0 0 2em #646cffaa);
@@ -113,6 +116,10 @@ header {
   justify-content: center;
 }
 .skill-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 280px;
   border: 0.2rem solid #0F0F0F;
   padding: 0.6rem;
   margin: 1rem;
@@ -122,6 +129,9 @@ header {
   text-align: center;
   font-size: 2rem;
   margin-bottom: 0.7rem;
+}
+.skills svg{
+  margin: 3px 5px;
 }
 
 /* Project Page */
