--- a/src/App.css
+++ b/src/App.css
@@ -29,7 +29,7 @@ header {
 }
 
 
-.nav-links {
+.nav-link {
   margin: 0.2rem 0.4rem;
   padding: 0.5rem;
   color: #ebce5b;
@@ -37,7 +37,7 @@ header {
   width: 4rem;
 }
 
-.nav-links:hover {
+.nav-link:hover {
   color: #F4D03F;
   font-weight: bold;
 }
@@ -52,6 +52,7 @@ header {
 .wrapper {
   display: flex;
   justify-content: center;
+  position: relative;
   /* flex-wrap: wrap; */
   align-items: center;
   width: 90%;
@@ -171,21 +172,15 @@ header {
 } 
 
 /* Contact Page */
-.Main{
-  width:90%;
-  margin: 5rem auto;
-  margin-top: 7rem;
-  display: flex;
-  align-items: center;
+.contact-section{
+  width: 90%;
+  padding: 1rem;
   background-color: #1d1d1b;
   border-radius: 15px;
   box-shadow: 2px 2px 6px #313131;
-}
-
-.right-side {
-  flex-grow: 1;
   max-width: 420px;
-  margin: auto;
+  margin: 3rem auto;
+  margin-top: 5rem;
 }
 
 .Contact{
@@ -232,15 +227,24 @@ header {
   margin: 10px;
   resize: none;
 }
+.submit-btn {
+  margin-top: 3px;
+  box-shadow: 0.2px 0.2px 0px 4px #313131;
+  background-color: #0F0F0F;
+}
 
-.Submit{
+/* Utility */
+.txt-center{
   text-align: center;
 }
-/* Utility */
 .mt-6 {
   margin-top: 6rem;
 }
 @media screen and (max-width: 720px) {
+  .nav-link {
+    padding: 0.2rem;
+    margin: 0.2rem;
+  }
   .wrapper .coder-image {
     display: none;
   }
