--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 header {
-  background-color: #0F0F0F;
-  padding: 5px 10px;
+  background-color: #0f0f0f;
+  padding: 5px 0;
   position: fixed;
   top: 0;
   left: 0;
@@ -8,7 +8,6 @@ header {
   z-index: 50;
 }
 .container {
-  width: 90%;
   max-width: 960px;
   margin: auto;
   display: flex;
@@ -16,7 +15,7 @@ header {
   justify-content: space-between;
 }
 
-.logo img{
+.logo img {
   will-change: filter;
   transition: filter 300ms;
   margin-top: 5px;
@@ -29,7 +28,6 @@ header {
   filter: drop-shadow(0 0 2em #646cffaa);
 }
 
-
 .nav-link {
   margin: 0.2rem 0.4rem;
   padding: 0.5rem;
@@ -39,7 +37,7 @@ header {
 }
 
 .nav-link:hover {
-  color: #F4D03F;
+  color: #f4d03f;
   font-weight: bold;
 }
 
@@ -54,14 +52,11 @@ header {
   display: flex;
   justify-content: center;
   position: relative;
-  /* flex-wrap: wrap; */
   align-items: center;
-  width: 90%;
   max-width: 960px;
   margin: auto;
   min-height: 100vh;
 }
-
 
 .headline {
   font-weight: semibold;
@@ -75,16 +70,21 @@ header {
 .coder-image {
   max-width: 25rem;
 }
-         
+
 .btn-grad {
-  background-image: linear-gradient(to right, #16A085 0%, #F4D03F  51%, #16A085  100%);
+  background-image: linear-gradient(
+    to right,
+    #16a085 0%,
+    #f4d03f 51%,
+    #16a085 100%
+  );
   margin: 10px 0;
   padding: 0.5rem 1rem;
   text-align: center;
   text-transform: uppercase;
   transition: 0.5s;
   background-size: 200% auto;
-  color: white;            
+  color: white;
   /* box-shadow: 0 0 0.4rem #eee; */
   border-radius: 0.5rem;
   display: block;
@@ -111,7 +111,7 @@ header {
 .skill-section h1 {
   text-align: center;
 }
-.skill-features{
+.skill-features {
   display: flex;
   flex-wrap: wrap;
   margin: 0.5rem;
@@ -121,18 +121,19 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 280px;
-  border: 0.2rem solid #0F0F0F;
+  width: 320px;
+  border: 0.3rem solid #0f0f0f;
   padding: 0.6rem;
   margin: 1rem;
-  border-radius: 0.5rem;
+  border-top-left-radius: 1.5rem;
+  border-top-right-radius: 1.5rem;
 }
 .skill-container h2 {
   text-align: center;
   font-size: 2rem;
   margin-bottom: 0.7rem;
 }
-.skills svg{
+.skills svg {
   margin: 3px 5px;
 }
 
@@ -170,10 +171,10 @@ header {
 }
 .card .desc {
   margin-top: 4px;
-} 
+}
 
 /* Contact Page */
-.contact-section{
+.contact-section {
   width: 90%;
   padding: 1rem;
   background-color: #1d1d1b;
@@ -184,7 +185,7 @@ header {
   margin-top: 5rem;
 }
 
-.Contact{
+.Contact {
   text-align: center;
   margin: 10px;
   font-size: 5rem;
@@ -200,7 +201,7 @@ header {
   margin: 20px;
 }
 
-.address-section{
+.address-section {
   width: 38%;
   margin-top: 13px;
 }
@@ -209,33 +210,43 @@ header {
   font-size: 0.8rem;
 }
 .textbox {
-  border: none;
+  border: 1px solid gray;
   outline: none;
   font-size: 1rem;
-  padding: 7px 1rem;
-  border-radius: 1rem;
+  padding: 10px;
+  border-radius: 5px;
   width: 90%;
   margin: 10px;
 }
 
 .textarea {
-  border: none;
+  border: 1px solid gray;
   outline: none;
   font-size: 1rem;
-  padding: 1rem;
-  border-radius: 1rem;
+  min-height: 120px;
+  padding: 10px;
+  border-radius: 5px;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
   width: 90%;
   margin: 10px;
   resize: none;
 }
 .submit-btn {
+  outline: none;
+  border-radius: 3px;
   margin-top: 3px;
-  box-shadow: 0.2px 0.2px 0px 4px #313131;
-  background-color: #0F0F0F;
+  background-color: #fff;
+  color: #000;
+}
+.submit-btn:hover {
+  background-color: #0f0f0f;
+  color: #fff;
+  border: 1px solid gray;
 }
 
 /* Utility */
-.txt-center{
+.txt-center {
   text-align: center;
 }
 .mt-6 {
@@ -252,6 +263,6 @@ header {
 }
 @media screen and (max-width: 960px) {
   .wrapper .coder-image {
-    max-width: 20rem
+    max-width: 20rem;
   }
 }
